[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.4.4, released May 14, 2011

  - Make sure we escape backslashes when building the 
    DELETE queries for pushdelta syncs [GSM]. Reported 
    by Gabriel Weinberg <yegg@alum.mit.edu>

  - Report correct number of inserts/deletions in 
    bucardo_ctl status [GSM]. Reported by Gabriel 
    Weinberg <yegg@alum.mit.edu>

Bucardo version 4.4.3, released April 15, 2011

  - Fix rare race condition when slave database dies. [GSM]
    Thanks to Kaveh Mousavi Zamani for the report.


Bucardo version 4.4.2, released March 17, 2011

  - Fix incorrect SET TIME ZONE inside the bucardo_delta functions. [GSM]


Bucardo version 4.4.1, released November 9, 2010

 - Set the search_path to prevent bogus warnings on startup about sequence 
   mismatches based on schema names. [GSM] (Bug #17)

 - Fix failing makedelta when using multi-column primary keys. 
   [GSM, reported by Michelle Sullivan]

 - Fix for failing swap syncs when column is not all lowercase. [GSM]

 - Fix errors with bytea and swap syncs. [GSM]

 - Use clock_timestamp if Postgres version is 8.2 or better. (Bug #25)
   Thanks to David Christensen <david@endpoint.com> for digging in 
   and solving this.

 - Fix error in bind_param for target to source. [GSM]

 - Make sure we truly reset onetimecopy for persistent controllers and children. [GSM]

 - If in onetimecopy mode, always create a q entry, regardless of synctype. [GSM]

 - Rename the ENCODE call for bytea selects. [GSM]

 - Always make the source transaction serializable. [GSM]

 - Force time zone to GMT to resolve timestamptz issues with bucardo_delta
   [GSM, Michelle Sullivan]

 - Allow '2' as a valid sqlstate after exception thrown. [GSM]

 - Fix typo with 'lowest/highest' standard conflict methods. Caught by Don Drake.

 - Remove race condition from bucardo_purge_q_table() [GSM]

 - Make search_path declaration LOCAL in bucardo_audit() [GSM]
