@@ -40,7 +40,7 @@
 </p>
 <hr />
 <h1><a name="version">VERSION</a></h1>
-<p>This document describes version 4.4.3 of Bucardo</p>
+<p>This document describes version 4.4.5 of Bucardo</p>
 <p>
 </p>
 <hr />
