@@ -31,24 +31,7 @@ bucardo_ctl.html
 .perlcriticrc
 t/00-release.t
 t/01-basic.t
-t/02-simple.t
-t/02-monkey_with_db_table.t
-t/02-monkey_with_goat_table.t
-t/02-monkey_with_herd.t
-t/02-monkey_with_sync_table.t
-t/03-goat.t
-t/04-pushdelta.t
-t/05-fullcopy.t
-t/06-multicolpk.t
-t/06-multicolpushdelta.t
-t/07-multicolswap.t
-t/08-wildkick.t
 t/09-uniqueconstraint.t
-t/10-makedelta.t
-t/11-customselect.t
-t/12-addtable.t
-t/13-ddl.t
-t/14-truncate.t
 t/15-star.t
 t/98-cleanup.t
 t/99-signature.t
