@@ -4,7 +4,7 @@ Bucardo - a table-based replication system
 DESCRIPTION:
 ------------
 
-This is version 4.4.4 of Bucardo.
+This is version 4.4.5 of Bucardo.
 
 
 COPYRIGHT:
