@@ -16,22 +16,22 @@ Hash: RIPEMD160
 
 SHA1 57c33900036014972baca98ce5c014e802050bc7 .gitignore
 SHA1 721d9bef993d601be558b059f33f17e38edd6d3c .perlcriticrc
-SHA1 1da94113b66a8d5bc2b3c824368222e8a66d0d34 Bucardo.pm
-SHA1 f810abc8c011ef501ad95978edbbd06a6995e4b2 Bucardo.pm.html
-SHA1 71248e09864715bfe93a68a0bd0d96713757f599 Changes
+SHA1 e039307105117b0eaefaeb30b708c013a85d07b1 Bucardo.pm
+SHA1 8792cca5c2857d7d8413a78781469f4dfb147dbf Bucardo.pm.html
+SHA1 15386a12c6eff3adaa17db613b385ffc25e39ea8 Changes
 SHA1 1f0f70bd74872837da0b48c83df3800cf4c7e0b0 INSTALL
 SHA1 bf81be749492fdcc2506046d75892c5c20286fb2 LICENSE
-SHA1 78f25ec1a2709032ee4a42c360890973cda42275 MANIFEST
+SHA1 1008f38a20638f315f64807dff812c86118ada04 MANIFEST
 SHA1 b8daeb8ec60c2bff1a99b5081f9ba46c255dc339 MANIFEST.SKIP
-SHA1 8cf949a0538478ab9ff05a53d3d908cf338619b9 META.yml
-SHA1 d43d90f1588721655aa0f06f811b19962b5200c5 Makefile.PL
-SHA1 8422abb8d835719c64b1f2816b1e519f63257919 README
+SHA1 5b9fa24aa2fa20e6eeb1db24c25aee8cd058758e META.yml
+SHA1 ce3a37398dab6ffd475d01ff359b1f9a9e58bb68 Makefile.PL
+SHA1 74e03c38efd51100d49b7f4ecd0444a1d4305a08 README
 SHA1 e3b3b6308e27cc932c92cf6e2e46d2920ad47a6d README.dev
 SHA1 8d5bda2fcaff0cc9840fae795275d0be61080b6f TODO
 SHA1 11dee45376376dd58a27beb74d5ef284735b59fe UPGRADE
-SHA1 071b6b37658de3b0f2c459bd48dfbbbeef297715 bucardo.schema
-SHA1 33d7a6f08d9b65c9d4dd7fa6fe568892ea4d2542 bucardo_ctl
-SHA1 1a8401b69caef867034d11cbd9a9e58e12157606 bucardo_ctl.html
+SHA1 61fb62b8e2b6990bf5697adfca165851d8f0f759 bucardo.schema
+SHA1 5862f9204649cde2adb5d73764d445fc48371cb1 bucardo_ctl
+SHA1 01e3af099bf31d7b609ef0dcff336c6e75b39d17 bucardo_ctl.html
 SHA1 98e77ebb6f5d7477d1dc0a7ca2ed79f3f791df5e patches/Bucardo.4.4.0.fix.search.path.patch.txt
 SHA1 059acdd6381de8cbded6b901f70ee2a986817930 scripts/README
 SHA1 376e1fd0bb653ad76afe8072414bb96a6e3cf362 scripts/bucardo-report
@@ -49,7 +49,7 @@ SHA1 3b4d7c1913f2703457e842b952fd2de53cd562f3 t/BucardoTesting.pm
 SHA1 e34204e19b81328cf90ad2e656db9a4e4ae57f0a t/truncate_test_logs.notest
 -----BEGIN PGP SIGNATURE-----
 
-iEYEAREDAAYFAk3PSHQACgkQvJuQZxSWSshKIACcCKq+HM7V5Snzn5XVMyCfSRLG
-vX8An3t42qcKoPnDsQwezvxX+hxVCDfk
-=tTK/
+iEUEAREDAAYFAk39Ep4ACgkQvJuQZxSWSsiC0QCY4zMRYsqpkbiFszipvVLE/3dL
++QCdG0UYmTxascALK82H0+0KrrX9n08=
+=agu1
 -----END PGP SIGNATURE-----
