@@ -22,7 +22,7 @@ $Data::Dumper::Indent = 1;
 
 return 1 if $ENV{BUCARDO_CTL_TEST};
 
-our $VERSION = '4.4.4';
+our $VERSION = '4.4.5';
 
 *STDOUT->autoflush(1);
 *STDERR->autoflush(1);
@@ -5587,7 +5587,7 @@ bucardo_ctl - utility script for controlling the Bucardo program
 
 =head1 VERSION
 
-This document describes version 4.4.4 of bucardo_ctl
+This document describes version 4.4.5 of bucardo_ctl
 
 =head1 SYNOPSIS
 
