@@ -48,7 +48,7 @@
 </p>
 <hr />
 <h1><a name="version">VERSION</a></h1>
-<p>This document describes version 4.4.3 of bucardo_ctl</p>
+<p>This document describes version 4.4.5 of bucardo_ctl</p>
 <p>
 </p>
 <hr />
